# ouroboros-desktop

./: .gitignore  Ouroboros.spec  README.md  app.py  colab_bootstrap_shim.py  launcher.py  pyproject.toml  server.py
docs/: ARCHITECTURE.md
ouroboros/: __init__.py  agent.py  config.py  context.py  llm.py  local_model.py  loop.py  memory.py  safety.py
ouroboros/tools/: registry.py  search.py
prompts/: CONSCIOUSNESS.md  SAFETY.md  SYSTEM.md
supervisor/: events.py  message_bus.py  state.py
ui/: first_run.py
web/: app.js  style.css
