[project]
name = "ouroboros"
version = "2.0.0"
description = "Self-creating agent"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.66.0",
    "requests",
    "dulwich",
    "starlette",
    "uvicorn[standard]",
    "websockets",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter
